Added Aspose, added new questions, added download

--- a/Igra/Views/Login/Index.cshtml
+++ b/Igra/Views/Login/Index.cshtml
@@ -282,12 +282,95 @@
                                         <p style="font-weight: bold;">Ponekad bacam smeće na ulicu (vankorpe/ kontejnera) kad niko ne gleda</p>
                                     </div>
                                     <div class="form-group">
-                                        <label>1 <input type="radio" id="question101" data-bind="checquestion10ked: " name="val10" value="1"></label>
+                                        <label>1 <input type="radio" id="question101" data-bind="checked: question10" name="val10" value="1"></label>
                                         <label>2 <input type="radio" id="question102" data-bind="checked: question10" name="val10" value="2"></label>
                                         <label>3 <input type="radio" id="question103" data-bind="checked: question10" name="val10" value="3"></label>
                                         <label>4 <input type="radio" id="question104" data-bind="checked: question10" name="val10" value="4"></label>
                                         <label>5 <input type="radio" id="question105" data-bind="checked: question10" name="val10" value="5"></label>
                                     </div>
+                                </div>
+                                <div class="form-group">
+                                    <p style="color: #99439C;font-size: 18px;">Zamislite da ste slučajno upareni sa drugom, nepoznatom osobom. I Vi i druga osoba ste u situaciji da donosite niz odluka vezanih za raspodelu bodova (ili novca) izborom jedne od tri ponuđene varijante raspodele. Prva cifra se odnosi na broj poena koji Vi zadržavate, a druga na broj poena koji prosleđujete drugom. Pred Vama je devet takvih odluka.</p>
+                                </div>
+                                <div class="form-group">
+                                    <p style="font-weight: bold;">Sebi/drugome</p>
+                                </div>
+                                <div class="form-group">
+                                    <label>480/80 <input type="radio" id="question111" data-bind="checked: question11" name="val11" value="1"></label>
+                                    <label>540/280 <input type="radio" id="question112" data-bind="checked: question11" name="val11" value="2"></label>
+                                    <label>480/480 <input type="radio" id="question113" data-bind="checked: question11" name="val11" value="3"></label>
+                                </div>
+                                <div style="background-color:#E5C8E4">
+                                    <div class="form-group">
+                                        <p style="font-weight: bold;">Sebi/drugome</p>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>560/300 <input type="radio" id="question121" data-bind="checked: question12" name="val12" value="1"></label>
+                                        <label>500/500 <input type="radio" id="question122" data-bind="checked: question12" name="val12" value="2"></label>
+                                        <label>500/100 <input type="radio" id="question123" data-bind="checked: question12" name="val12" value="3"></label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <p style="font-weight: bold;">Sebi/drugome</p>
+                                </div>
+                                <div class="form-group">
+                                    <label>520/520 <input type="radio" id="question131" data-bind="checked: question13" name="val13" value="1"></label>
+                                    <label>520/120 <input type="radio" id="question132" data-bind="checked: question13" name="val13" value="2"></label>
+                                    <label>580/320 <input type="radio" id="question133" data-bind="checked: question13" name="val13" value="3"></label>
+                                </div>
+                                <div style="background-color:#E5C8E4">
+                                    <div class="form-group">
+                                        <p style="font-weight: bold;">Sebi/drugome</p>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>500/100 <input type="radio" id="question141" data-bind="checked: question14" name="val14" value="1"></label>
+                                        <label>560/300 <input type="radio" id="question142" data-bind="checked: question14" name="val14" value="2"></label>
+                                        <label>490/490 <input type="radio" id="question143" data-bind="checked: question14" name="val14" value="3"></label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <p style="font-weight: bold;">Sebi/drugome</p>
+                                </div>
+                                <div class="form-group">
+                                    <label>560/300 <input type="radio" id="question151" data-bind="checked: question15" name="val15" value="1"></label>
+                                    <label>500/500 <input type="radio" id="question152" data-bind="checked: question15" name="val15" value="2"></label>
+                                    <label>490/90 <input type="radio" id="question153" data-bind="checked: question15" name="val15" value="3"></label>
+                                </div>
+                                <div style="background-color:#E5C8E4">
+                                    <div class="form-group">
+                                        <p style="font-weight: bold;">Sebi/drugome</p>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>500/500 <input type="radio" id="question161" data-bind="checked: question16" name="val16" value="1"></label>
+                                        <label>500/100 <input type="radio" id="question162" data-bind="checked: question16" name="val16" value="2"></label>
+                                        <label>570/300 <input type="radio" id="question163" data-bind="checked: question16" name="val16" value="3"></label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <p style="font-weight: bold;">Sebi/drugome</p>
+                                </div>
+                                <div class="form-group">
+                                    <label>510/510 <input type="radio" id="question171" data-bind="checked: question17" name="val17" value="1"></label>
+                                    <label>560/300 <input type="radio" id="question172" data-bind="checked: question17" name="val17" value="2"></label>
+                                    <label>510/110 <input type="radio" id="question173" data-bind="checked: question17" name="val17" value="3"></label>
+                                </div>
+                                <div style="background-color:#E5C8E4">
+                                    <div class="form-group">
+                                        <p style="font-weight: bold;">Sebi/drugome</p>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>550/300 <input type="radio" id="question181" data-bind="checked: question18" name="val18" value="1"></label>
+                                        <label>500/100 <input type="radio" id="question182" data-bind="checked: question18" name="val18" value="2"></label>
+                                        <label>500/500 <input type="radio" id="question183" data-bind="checked: question18" name="val18" value="3"></label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <p style="font-weight: bold;">Sebi/drugome</p>
+                                </div>
+                                <div class="form-group">
+                                    <label>480/100 <input type="radio" id="question191" data-bind="checked: question19" name="val19" value="1"></label>
+                                    <label>490/490 <input type="radio" id="question192" data-bind="checked: question19" name="val19" value="2"></label>
+                                    <label>540/300 <input type="radio" id="question193" data-bind="checked: question19" name="val19" value="3"></label>
                                 </div>
                                     <div class="form-group">
                                         <div class="row">
@@ -302,6 +385,7 @@
                     </div>
                 </div>
             </div>
+            <button data-bind="click: downloadFile">Export u Excel</button>
         </div>
     </div>
 </div>
