--- a/Igra/Views/Tutorial/Index.cshtml
+++ b/Igra/Views/Tutorial/Index.cshtml
@@ -18,7 +18,7 @@
                 <img src="~/Images/Slide2.JPG" alt="Uvod" class="slideTutorial" />
             </div>
 
-            <div class="item">
+            @*<div class="item">
                 <img src="~/Images/Slide3.JPG" alt="Prva igra" class="slideTutorial" />
             </div>
 
@@ -36,7 +36,7 @@
 
             <div class="item">
                 <img src="~/Images/Slide7.JPG" alt="Srećno" class="slideTutorial" />
-            </div>
+            </div>*@
 
             <div class="item">
                 <div class="slideTutorial text-center" style="height:541.125px; padding: 70px 0;">
@@ -44,7 +44,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Left and right controls -->
         <a class="left carousel-control" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
