--- a/Igra/Views/Game/Index.cshtml
+++ b/Igra/Views/Game/Index.cshtml
@@ -127,7 +127,7 @@
                         <!-- /ko -->
                         <!-- ko if: gameNumber() == 6 -->
                         <div class="tab-pane active" role="tabpanel" id="step2">
-                            <h3>Peta igra - izaberite jednu kartu</h3> <span data-bind="text: game5NumberOfPlay"></span>
+                            <h3>Peta igra - izaberite jednu kartu</h3>
                             <div data-bind="if: !isImageDisplayed2()" class="col-md-4 col-md-offset-4">
                                 <figure data-bind="click: playCard51" class="figure" style="float:left">
                                     <img class="slikaCrvena figure-img img-fluid rounded" src="~/Images/redCard.png" />
